--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
 # Site settings
 title: Emilian Postolache # site title
 description: >- # site description
-  I am a Research Fellow at Ca' Foscari University of Venice, interested in generative models, especially applied to compositional music generation. I also worked on source separation, foley sound synthesis, EEG music decoding and machine translation. I pursued internships at Dolby Laboratories, SonyCSL Tokyo and visited the Center For Digital Music in Queen Mary University of London.
+  Senior AI Research Scientist @ Iris Audio Technologies. Previous: Sapienza University of Rome (PhD), Ca' Foscari University of Venice (PostDoc), Queen Mary University of London (Visitor), Dolby Labs (Intern) and Sony CSL Tokyo (Intern).
 lang: en-US # default lang
 timezone: Europe/Rome # set your timezone
 image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
 repo: https://github.com/EmilianPostolache/site # site repo [optional]
-mode: dark # default theme "dark" | "light"
+mode: light # default theme "dark" | "light"
 
 # Profile settings
 author:
   name: Emilian Postolache # author name
   bio: >- # tell to the world
-   I am a Research Fellow at Ca' Foscari University of Venice, interested in generative models, especially applied to compositional music generation. I also worked on source separation, foley sound synthesis, EEG music decoding and machine translation. I pursued internships at Dolby Laboratories, SonyCSL Tokyo and visited the Center For Digital Music in Queen Mary University of London.
+   Senior AI Research Scientist @ Iris Audio Technologies. Previous: Sapienza University of Rome (PhD), Ca' Foscari University of Venice (PostDoc), Queen Mary University of London (Visitor), Dolby Labs (Intern) and Sony CSL Tokyo (Intern).
   username: emilianpos # general username
   github: EmilianPostolache # github username
   twitter: EmilianPostola1 # twitter username
-  email: emilian.postolache@unive.it # email adress
+  email: emilian@shapedbyiris.com # email adress
   avatar: /assets/img/avatar.jpg # change with your own avatar
 
 # URL settings
